# JinWu

./: .gitignore  .readthedocs.yaml  ASYMMETRIC_ERRORS.md  COPYRIGHT  FITTING_GUIDE.md  LICENSE  Makefile  Query)  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: RedshiftExtrapolator.md  api.rst  changelog.rst  conf.py  index.rst  quickstart.rst  redshift_extrapolator_flowchart.py
docs/_static/: custom.css
docs/locale/zh_CN/LC_MESSAGES/: RedshiftExtrapolator.mo  RedshiftExtrapolator.po  api.mo  api.po  changelog.mo  changelog.po  index.mo  index.po  quickstart.mo  quickstart.po
docs/locale/zh_CN/LC_MESSAGES/api/: jinwu.application.netdata.mo  jinwu.application.netdata.po  jinwu.background.BackgroundCountsPosterior.mo  jinwu.background.BackgroundCountsPosterior.po  jinwu.background.BackgroundPrior.mo  jinwu.background.BackgroundPrior.po  jinwu.background.BackgroundSpectralPrior.mo  jinwu.background.BackgroundSpectralPrior.po  jinwu.core.ArfBase.mo  jinwu.core.ArfBase.po  jinwu.core.ArfData.mo  jinwu.core.ArfData.po  jinwu.core.ArfReader.mo  jinwu.core.ArfReader.po  jinwu.core.ArfWriter.mo  jinwu.core.ArfWriter.po  jinwu.core.ChannelBand.mo  jinwu.core.ChannelBand.po  jinwu.core.EnergyBand.mo  jinwu.core.EnergyBand.po  jinwu.core.EventData.mo  jinwu.core.EventData.po  jinwu.core.EventDataBase.mo  jinwu.core.EventDataBase.po  jinwu.core.EventWriter.mo  jinwu.core.EventWriter.po  jinwu.core.FitsHeaderDump.mo  jinwu.core.FitsHeaderDump.po  jinwu.core.HduHeader.mo  jinwu.core.HduHeader.po  jinwu.core.JointDataset.mo  jinwu.core.JointDataset.po  jinwu.core.LightcurveData.mo  jinwu.core.LightcurveData.po  jinwu.core.LightcurveDataBase.mo  jinwu.core.LightcurveDataBase.po  jinwu.core.LightcurveDataset.mo  jinwu.core.LightcurveDataset.po  jinwu.core.LightcurveReader.mo  jinwu.core.LightcurveReader.po  (+122 more)
docs/locale/zh_CN/LC_MESSAGES/usage/: lightcurve.mo  lightcurve.po  nhtot.mo  nhtot.po  spectral.mo  spectral.po  upperlimits.mo  upperlimits.po
docs/usage/: lightcurve.rst  nhtot.rst  spectral.rst  upperlimits.rst
jinwu/: meta.yaml
recipe/: meta.yaml
src/autohea/: __init__.py
src/autohea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autohea/autohea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autohea/background/: backprior.py
src/autohea/core/: __init__.py  analysis.py  arf.py  file.py  fit.py  heasoft.py  lf.py  plot.py  rmf.py  rsp.py  time.py  utils.py
src/autohea/data/: EP_bkg_Particles_PerCM2_12umCMOS.fits
src/autohea/lightcurve/: __init__.py  duration.py  lcfake.py  trigger.py
src/autohea/missions/: __init__.py
src/autohea/missions/fermi/gbm/: GBMObservation.py  __init__.py
src/autohea/response/: gbm.py
src/autohea/spectrum/: specfake.py
src/jinwu/: __init__.py  _version.py  time.pyi  xselect.mdb  xselect_mdb.pkl
src/jinwu/application/: __init__.py  datasets.py
src/jinwu/background/: __init__.py
src/jinwu/cluster/: __init__.py
src/jinwu/compat/: __init__.py
src/jinwu/compat/core/: __init__.py
src/jinwu/core/: __init__.py  base.py  config.py  data.py  datasets.py  file.py  fit.py  gti.py  heasoft.py  host.py  instruments.py  io.py  lf.py  ns.py  ogip.py  ops.py  plot.py  rebin_rs.py  redshift.py  spectrum_prep.py  time.py  txx.py  units.py  upperlimit.py  utils.py  xselect.py
src/jinwu/data/: EP_bkg_Xray_PerCM2_12umCMOS.fits  __init__.py  datasets.py  xselect.mdb  xselect_mdb.pkl
src/jinwu/domain/: __init__.py
src/jinwu/domain/io/: __init__.py
src/jinwu/ep/: __init__.py
src/jinwu/fermi/: __init__.py
src/jinwu/fermi/gbm/: GBMObservation.py  __init__.py
src/jinwu/ftools/: __init__.py  fextract.py  ftgrouppha.py  ftrbnpha.py  ftrbnrmf.py  ftselect.py  grppha.py  grppha_hsp.py  region.py  rmf_mapping.py  teldef.py  teldef_helpers.py  xselect_mdb.py
src/jinwu/lf/: __init__.py  detectability.py  lcfake.py  legacy_redshift.py  redshift.py  specfake.py
src/jinwu/lightcurve/: __init__.py  duration.py  lcfake.py  trigger.py
src/jinwu/missions/fermi/gbm/: GBMObservation.py
src/jinwu/model/: __init__.py  modelbase.py
src/jinwu/physics/: __init__.py  gr.py  radiation.py
src/jinwu/response/: __init__.py
src/jinwu/spectrum/: __init__.py  specfake.py
src/jinwu/swift/: __init__.py
src/jinwu/swift/bat/: BATObservation.py  __init__.py  attitude.py
src/jinwu/timing/: __init__.py
src/jinwurs/: Cargo.toml  README.md  pyproject.toml
src/jinwurs/conda-recipe/: meta.yaml
src/jinwurs/src/: lib.rs
test/: prepare_backscal.ipynb  test.ipynb  test_lf_model_structure.py  test_lightcurve.ipynb  test_time.ipynb  test_utils_txx_units.py
testrs/: test_rebin_rs.py
