[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jinwu"
dynamic = ["version"]
description = "Joint inference and physical modeling toolkit for high-energy transient light-curve and spectral analysis."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Xinxiang Sun", email = "sunxx@nao.cas.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "emcee",
    "sherpa",
    "bxa",
    "pymc",
    "swiftbat"
]
keywords = ["astrophysics", "transient", "lightcurve", "spectral", "modeling", "jinwu"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage = "https://github.com/xinxiangsun/jinwu"
Repository = "https://github.com/xinxiangsun/jinwu"
Documentation = "https://github.com/xinxiangsun/jinwu/blob/master/README.md"

[tool.setuptools.packages.find]
where = ["src"]

# Git-based versioning via setuptools_scm
[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/jinwu/_version.py"
fallback_version = "0.0.0"