[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jinwu"
version = "0.0.30"
description = "Joint inference and physical modeling toolkit for high-energy transient light-curve and spectral analysis."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Xinxiang Sun", email = "sunxx@nao.cas.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.9",
    "astropy>=7.1.0",
    "emcee>=3.0",
    "bxa>=4.0",
    "pymc>=5.0",
    "swiftbat",
    "regions>=0.5",
    "ipyaladin>=0.1",
    "requests>=2.25",
    "pillow>=9.0",
    "batanalysis>=2.1"
]
keywords = ["astrophysics", "transient", "lightcurve", "spectral", "modeling", "jinwu"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage = "https://github.com/xinxiangsun/jinwu"
Repository = "https://github.com/xinxiangsun/jinwu"
Documentation = "https://jinwu.readthedocs.io"

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "sphinx-automodapi>=0.17",
    "myst-parser>=3",
]
rust = ["jinwurs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access (hits live Swift UKSSDC APIs)",
]