[package]
name = "jinwurs"
version = "0.0.30"
edition = "2021"
description = "Rust-accelerated kernels for jinwu — fast rebinning and X-ray statistics"
license = "GPL-3.0-or-later"
repository = "https://github.com/xinxiangsun/JinWu"
readme = "README.md"

[lib]
name = "jinwurs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
