[package]
name = "jinwurs"
version = "0.0.31"
edition = "2021"
description = "Rust-accelerated kernels for jinwu — fast rebinning and X-ray statistics"
license = "GPL-3.0-or-later"
repository = "https://github.com/xinxiangsun/JinWu"

[lib]
name = "jinwurs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
numpy = "0.23"
