[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "jinwurs"
version = "0.0.31"
description = "Rust-accelerated kernels for jinwu — fast rebinning and X-ray statistics"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Xinxiang Sun", email = "sunxx@nao.cas.cn" }
]
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]
keywords = ["astrophysics", "transient", "x-ray", "rebinning", "statistics"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/xinxiangsun/JinWu"
Repository = "https://github.com/xinxiangsun/JinWu"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
bindings = "pyo3"
